@@ -1,20 +1,7 @@
-/**
- * Copyright 2017-2025 Fred Feng (paganini.fy@gmail.com)
- * 
- * Licensed under the Apache License, Version 2.0 (the "License"); you may not use this file except
- * in compliance with the License. You may obtain a copy of the License at
- *
- * http://www.apache.org/licenses/LICENSE-2.0
- *
- * Unless required by applicable law or agreed to in writing, software distributed under the License
- * is distributed on an "AS IS" BASIS, WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express
- * or implied. See the License for the specific language governing permissions and limitations under
- * the License.
- */
 package com.github.fastjpa;
 
 import java.util.ArrayList;
-import java.util.Arrays;
+import java.util.List;
 
 /**
  * 
@@ -25,12 +12,12 @@ import java.util.Arrays;
  */
 public class FieldList extends ArrayList<Field<?>> {
 
-    private static final long serialVersionUID = 1L;
+    private static final long serialVersionUID = 1992730401503253851L;
 
     public FieldList() {}
 
     public FieldList(Field<?>... fields) {
-        addAll(Arrays.asList(fields));
+        addAll(List.of(fields));
     }
 
     public FieldList addField(String attributeName) {
@@ -39,7 +26,7 @@ public class FieldList extends ArrayList<Field<?>> {
     }
 
     public FieldList addFields(String[] attributeNames) {
-        if (attributeNames != null) {
+        if (attributeNames != null && attributeNames.length > 0) {
             for (String attributeName : attributeNames) {
                 add(Property.forName(attributeName));
             }
@@ -53,7 +40,7 @@ public class FieldList extends ArrayList<Field<?>> {
     }
 
     public FieldList addFields(String alias, String[] attributeNames) {
-        if (attributeNames != null) {
+        if (attributeNames != null && attributeNames.length > 0) {
             for (String attributeName : attributeNames) {
                 add(Property.forName(alias, attributeName));
             }
@@ -68,6 +55,16 @@ public class FieldList extends ArrayList<Field<?>> {
 
     public FieldList addField(String alias, String attributeName, Class<?> requiredType) {
         add(Property.forName(alias, attributeName, requiredType));
+        return this;
+    }
+
+    public <E> FieldList addField(
+            @SuppressWarnings("unchecked") SerializedFunction<E, ?>... sFuns) {
+        if (sFuns != null && sFuns.length > 0) {
+            for (SerializedFunction<E, ?> sFun : sFuns) {
+                add(Property.forName(sFun));
+            }
+        }
         return this;
     }
 
